Version 1.1.0-CVS (?? ??? 2006)
 - PATCH 1470047: Auto-Completing Tasks
 - Changed gradients to save images in cache file and return real 
   url if called from background_css function in css files
 - Changed css and javascript to external files and enabled caching
 - Added db_cachedir setting to install/index.php script
 - Fixed bug 1467713: report belongs to a deleted user remains in DB
 - Fixed bug 1468170: Can't create Views with NUCs
 - Fixed bug 1468558: view of deleted user remains in the database
 - Fixed bug 1468877: <table> tag missing from 'Add Entry' site extras
 - Fixed bug 1428558: Rejected Event in Views
 - Changed the Timezone calculations to use PHP putenv
 - Fixed bug 1343631: Timezone / Summertime error
 - Fixed bug 1454998: Wrong character in notification mails
 - Fixed bug 1460511: 'Invalid Login' cannot be displayed correctly in German
 - Fixed bug 1462428: repeated reminders not working when using date/time
 - Fixed bug 1462455: reminder send-time offset from event end not beginning
 - Patch 1456375: day view not translating "Description"
 - Fixed bug 1455193: problem with updating the translation file
 - Fixed bug: Do not display logout/export in trailer if system is read-only
 - Fixed bug 1420859: Problems with overriding conflict
 - Fixed bug 1451583: Umlaut Event popup text together with FCKEditor-2.0
 - Patch 1279537: Don't display confidential events in upcoming.php
 - Patch 1445579: sort users in views
 - Performance improvement: if "cachedir" is defined in settings.php, then
   translations are parsed and stored as binary.  Future requests will load
   the already parsed binary data.
 - Added new options in includes/settings.php:
   "cachedir" specifies a db query cache directory.
   "db_debug" if "on", then SQL will be displayed at bottom of each page
 - Fixed bug 1448958: All day events incorrectly displayed in week view
 - Fixed bug 1449561: overlapping buttons at 'adminhome.php'
 - Fixed bug 1446790: user-ldap.php bug