@@ -10,11 +10,12 @@ if ( $readonly == 'Y' ) {
   $error = translate("You are not authorized");
 }
 
+
 //give user a change to add comments to approval email
 if ( ! empty ( $_POST ) ) {
   $comments = getPostValue ( 'comments' );
   $cancel   = getPostValue ( 'cancel' );   
-} else {
+} else if ( empty ( $ret ) ) {
    $q_string = $_SERVER['QUERY_STRING'];
 
    print_header ();
@@ -51,31 +52,11 @@ if ( access_is_enabled () && ! empty ( $user ) &&
 }
 
 if ( empty ( $error ) && $id > 0 ) {
-  $approve_type = LOG_APPROVE; //used in activity log below
-  // Update any extension events related to this one.
-  $res = dbi_execute ( "SELECT cal_id, cal_type FROM webcal_entry " .
-    "WHERE cal_ext_for_id = ?", array( $id ) );
-  if ( $res ) {
-    if ( $row = dbi_fetch_row ( $res ) ) {
-      $ext_id = $row[0];
-      $approve_type = ( $row[1] == 'E' || $row[1] == 'M'? LOG_APPROVE : LOG_APPROVE_T ); 
-      if ( ! dbi_execute ( "UPDATE webcal_entry_user SET cal_status = 'A' " .
-        "WHERE cal_login = ? AND cal_id = ?", array( $app_user, $ext_id ) ) ) {
-        $error = translate("Error approving event") . ": " . dbi_error ();
-      }
-    }
-    dbi_free_result ( $res );
-  }
-  
-  if ( ! dbi_execute ( "UPDATE webcal_entry_user SET cal_status = 'A' " .
-    "WHERE cal_login = ? AND cal_id = ?", array( $app_user, $id ) ) ) {
-    $error = translate("Error approving event") . ": " . dbi_error ();
-  } else {
-    activity_log ( $id, $login, $app_user, $approve_type, "" );
-  }
+  update_status ( 'A', $app_user, $id, $type );
 }
 
-if ( strlen ( $comments ) && empty ( $cancel ) ) {
+ 
+if ( ! empty ( $comments ) && empty ( $cancel ) ) {
   $mail = new WebCalMailer;
   // Email event creator to notify that it was approved with comments.
   // Get the name of the event
@@ -129,7 +110,7 @@ if ( strlen ( $comments ) && empty ( $cancel ) ) {
         }
         $msg .= "\n" . $url;
       }
-      if ( strlen ( $comments ) ) {
+      if ( ! empty ( $comments ) ) {
         $msg .= "\n\n" . translate ( "Comments" ) . ": " . $comments;
       }
       $from = $EMAIL_FALLBACK_FROM;
@@ -155,12 +136,13 @@ if ( strlen ( $comments ) && empty ( $cancel ) ) {
 //return to login TIMEZONE
 set_env ( "TZ", $TIMEZONE );
 if ( empty ( $error ) ) {
-  if ( ! empty ( $ret ) && $ret == "listall" )
+  if ( ! empty ( $ret ) && $ret == "listall" ) {
     do_redirect ( "list_unapproved.php" );
-  else if ( ! empty ( $ret ) && $ret == "list" )
+  } else if ( ! empty ( $ret ) && $ret == "list" ) {
     do_redirect ( "list_unapproved.php?user=$app_user" );
-  else
+  } else {
     do_redirect ( $view_type . ".php?id=$id&amp;user=$app_user" );
+  }
   exit;
 }
 print_header ();
